Fix menu footer positioned too low

--- a/src/app.css
+++ b/src/app.css
@@ -1987,7 +1987,7 @@ body > .szh-menu-container {
   min-width: min(12em, 90vw);
 }
 .szh-menu .footer {
-  margin: 8px 0 -8px;
+  margin: 8px 0 -4px;
   padding: 8px 16px;
   color: var(--text-insignificant-color);
   font-size: 90%;
